Fix overflow for tags p and social icons in footer

--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -2,6 +2,7 @@
   padding: 0;
   min-height: 81px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   list-style: none;
